--- a/PlacasSoladres/Views/Citas.xaml
+++ b/PlacasSoladres/Views/Citas.xaml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModel="clr-namespace:PlacasSoladres.Models"
              x:Class="PlacasSoladres.Views.Citas"
              Title="Citas">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <ContentPage.BindingContext>
+        <viewModel:CitasVM></viewModel:CitasVM>
+    </ContentPage.BindingContext>
+
+    <Grid RowDefinitions=".2*,.8*" BackgroundColor="DimGray">
+        <Label Text="Bienvenido Daniel"
+               FontSize="Large"
+               FontAttributes="Bold"
+               VerticalOptions="Center"/>
+        <StackLayout Grid.Row="1">
+            <ListView ItemsSource="{Binding listaCita}" ItemSelected="onItemSelecter">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout>
+                                <Border Stroke="Black"
+                                        StrokeThickness="3"/>
+                                <Label Text="{Binding id,StringFormat='Cita {0}'}" FontSize="24" FontAttributes="Bold"
+                                       BackgroundColor="Beige" Padding="20"/>
+                                <Label Text="{Binding nombre,StringFormat='Cliente: {0}'}" BackgroundColor="Beige"></Label>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
+    </Grid>
 </ContentPage>
